# ScheduleGenerator

./: .gitignore  CMakeLists.txt  README_GUI.md  barchartwidget.cpp  barchartwidget.h  datamanager.cpp  datamanager.h  datatab.cpp  datatab.h  fitness.cpp  fitness.h  generationtab.cpp  generationtab.h  genetic_algorithm.cpp  genetic_algorithm.h  genetic_scheduler.cpp  genetic_scheduler.h  heatmapwidget.cpp  heatmapwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  models.h  resulttab.cpp  resulttab.h  scheduler.cpp  scheduler.h  scheduleutils.h  subjectdialog.cpp  subjectdialog.h  teacheravailabilitydialog.cpp  teacheravailabilitydialog.h  test_data.json
